html file modified

--- a/beginner/CharCount/index.html
+++ b/beginner/CharCount/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Character Counter</title>
-   <link rel="stylesheet" href="char.css">
-</head>
-<body>
- <textarea name="text" id="text-input" placeholder="input your text" class=""></textarea>
-   <p id="char-count">Characters left: /100</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Character Counter</title>
+    <link rel="stylesheet" href="char.css" />
+  </head>
+  <body>
+    <textarea
+      name="text" id="text-input" placeholder="input your text"class=""></textarea>
+    <p id="char-count">Characters left: /100</p>
 
-
-
-   <script src="char.js"></script>
-</body>
+    <script src="char.js"></script>
+  </body>
 </html>
