--- a/beginner/capitalLetter/index.html
+++ b/beginner/capitalLetter/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h2>First Letter Capitalize</h2>
-  <textarea name="" id="user-input" placeholder=""></textarea> 
+  <textarea name="" id="user-input" placeholder="Enter words here"></textarea> 
   <script src="capital.js"></script>
 </body>
 </html>
