--- a/projects/bookFinder/index.html
+++ b/projects/bookFinder/index.html
@@ -15,7 +15,7 @@
             <ul class="hidden md:flex space-x-10 font-medium p-5">
             <li><a href="#" class="hover:bg-slate-700 rounded p-2 hover:text-white">Home</a></li>
             <li><a href="src/nextChapter/explore.html" class="hover:bg-slate-700 rounded p-2 hover:text-white">Explore</a></li>
-            <li><a href="" class="hover:bg-slate-700 rounded p-2 hover:text-white">Favorite</a></li>
+            <li><a href="src/nextChapter/favorite.html" class="hover:bg-slate-700 rounded p-2 hover:text-white">Favorite</a></li>
             <li><a href="" class="hover:bg-slate-700 rounded p-2 hover:text-white">About</a></li>
           </ul>
 
@@ -43,9 +43,9 @@
          
           <div class="hidden md:hidden px-6 pb-6 space-y-5 font-medium justify-between" id="mobile-menu">
                <ul class="space-y-2 text-center text-xl">
-                  <li><a href="" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">Home</a></li>
-                  <li><a href="" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">Explore</a></li>
-                  <li><a href="" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">Favorite</a></li>
+                  <li><a href="#" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">Home</a></li>
+                  <li><a href="src/nextChapter/explore.html" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">Explore</a></li>
+                  <li><a href="src/nextChapter/favorite.html" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">Favorite</a></li>
                   <li><a href="" class="hover:bg-slate-700 hover:text-white rounded-md p-2 mb-5 px-10 space-y-10">About</a></li>
                </ul>
             </div>
@@ -77,7 +77,7 @@
 
 </section>    
    </main>
-
+<script src="./src/jsFiles/navbar.js"></script>
 <script src="./src/jsFiles/next.js"></script>
 </body>
 </html>
